회원가입 초안

--- a/ToGo_C/src/main/webapp/WEB-INF/web.xml
+++ b/ToGo_C/src/main/webapp/WEB-INF/web.xml
@@ -48,10 +48,21 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>JoinController</display-name>
+		<servlet-name>JoinController</servlet-name>
+		<servlet-class>kr.smhrd.controller.JoinController</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>JoinController</servlet-name>
+		<url-pattern>/JoinController</url-pattern>
 	</servlet-mapping>
 
 </web-app>
