--- a/ToGo_C/pom.xml
+++ b/ToGo_C/pom.xml
@@ -127,6 +127,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
+
 		<!-- Spring에서 DB에 연결하기 위한 mysql Driver API 추가 -->
 		<dependency>
 			<groupId>mysql</groupId>
