--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,9 @@ local.properties
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse,java
+
+# 추가적으로 HWP, PPTX, PDF, MP4 파일을 무시합니다.
+*.hwp
+*.pptx
+*.pdf
+*.mp4
